# bui

./: Cargo.toml
examples/: letters.rs  square.rs
src/: blockfont.rs  ellipse.rs  ellipse.wgsl  freeform_2dcapsule.rs  freeform_2dcapsule.wgsl  lib.rs  line.rs  line.wgsl  rect.rs  rect.wgsl  renderer.rs  resolution_buffer.rs  text.rs  text.wgsl  text_render.wgsl  ttf.rs  ttf_outline.rs  typed_uniform.rs
